feat: user management REST API endpoints